--- a/fuzzer/Cargo.toml
+++ b/fuzzer/Cargo.toml
@@ -20,11 +20,12 @@ log = "0.4.14"
 pretty_env_logger = "0.4.0"
 fastgen_common = { path = "../common" }
 wait-timeout = "0.2"
-twoway = "0.2.2"
+twoway = "0.2.0"
 memmap = "0.7.0"
 rand = "0.7"
-z3 = "0.11.2"
+inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm12-0"]  }
 blockingqueue = "0.1.1"
+z3 = "0.11.2"
 
 [build-dependencies]
 protoc-rust = "2.0"
